# packwiz-plugin

./: Cargo.toml
packwiz/: Cargo.toml  capabilities.json
packwiz/src/: error.rs  lib.rs  plugin.rs  serializable_error.rs
packwiz/src/api/: event.rs  import.rs  mod.rs  settings.rs  update.rs
packwiz/src/config/: consts.rs  host.rs  mod.rs
packwiz/src/core/domain/: error.rs
packwiz/src/features/: mod.rs
packwiz/src/features/events/: mod.rs
packwiz/src/features/events/app/: handle_plugin_event.rs  mod.rs
packwiz/src/features/events/domain/: mod.rs  plugin_event.rs
packwiz/src/features/events/infra/: mod.rs
packwiz/src/features/host/app/: commands.rs  log.rs  mod.rs
packwiz/src/features/host/domain/: host_result.rs  mod.rs
packwiz/src/features/host/infra/: host_functions.rs  mod.rs
packwiz/src/features/instance/: mod.rs
packwiz/src/features/instance/app/: commands.rs  create_instance_from_pack.rs  dto.rs  import.rs  mod.rs  update.rs
packwiz/src/features/instance/domain/: content_file.rs  content_type.rs  mod.rs  mod_loader.rs  pack_info.rs  packwiz_settings.rs
packwiz/src/features/instance/infra/: command_dto_ext.rs  host_functions.rs  mod.rs
packwiz/src/features/instance/utils/: extract_mod_loader.rs  mod.rs
packwiz/src/features/java/: mod.rs
packwiz/src/features/java/app/: get_java.rs  install_java.rs  mod.rs
packwiz/src/features/java/domain/: mod.rs
packwiz/src/features/java/infra/: host_functions.rs
packwiz/src/features/packwiz/: mod.rs
packwiz/src/features/packwiz/app/: mod.rs  (+1 more)
packwiz/src/helpers/: command.rs  log.rs  mod.rs  output.rs  packwiz.rs  redistributable.rs
packwiz/src/models/: import_config.rs  java.rs  loader_version.rs  mod.rs  new_instance.rs  pack_info.rs  packwiz.rs  packwiz_settings.rs  plugin_dto.rs  plugin_event.rs
packwiz/src/shared/: mod.rs
xtask/: Cargo.toml
xtask/src/: build.rs  clean.rs  main.rs  package.rs
xtask/src/core/app/: commands.rs  get_cargo_metadata_path.rs  mod.rs  run_command.rs
xtask/src/core/domain/: cli.rs
xtask/src/features/: mod.rs
(+28 files in other folders)
