[package]
name = "packwiz"
description = "Plugin for managing packwiz packs"
version = "0.0.1"
edition = "2021"
authors = ["MangriMen"]
license = "MIT"

[package.metadata]
name = "Packwiz"
api_version = "0.0.1"
allowed_hosts = ["github.com", "objects.githubusercontent.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-convert = "1.10.0"
extism-pdk = "1.3.0"
lazy_static = "1.5.0"
phf = { version = "0.11.3", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.139"
toml = "0.8.20"
url = "2.5.4"
serr = { git = 'https://github.com/MangriMen/serr.git', version = "0.2.0", features = [
  "derive",
] }

aether-core-plugin-api = { git = "https://github.com/MangriMen/aether-core.git", version = "0.1.0" }
