[package]
name = "packwiz"
description = "Plugin for managing packwiz packs"
version = "0.1.0"
edition = "2024"
authors = ["MangriMen"]
license = "MIT"

[package.metadata]
name = "Packwiz"
api_version = "0.2.0"
allowed_hosts = ["github.com", "objects.githubusercontent.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-convert = "1.30"
extism-pdk = "1.4"
path-slash = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
url = { version = "2.5", default-features = false, features = ["std"] }

aether-core-plugin-api = { git = "https://github.com/MangriMen/aether.git", version = "0.2.0" }
